| Summary: | ASTERISK-22507: app_queue assertion failure on caller hangup | ||||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |||
| Date Opened: | 2013-09-11 13:03:25 | Date Closed: | 2013-09-28 15:41:04 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Applications/app_queue | ||
| Versions: | SVN | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | Same setup as ASTERISK-22506 but with the DAHDI/G1/130 member commented out of the queue configuration to avoid that issue's CDR assertion.
The calls are connected and the Local/400@bri_net call optimizes out. Assertion failure happens when the caller (SIP/200) hangs up. | ||||
| Comments: | By: Richard Mudgett (rmudgett) 2013-09-11 13:13:27.600-0500 It looks like app_queue.c:handle_hangup() is trying to get the member snapshot of the optimized out local channel. Since the local channel is long gone, it cannot get the snapshot. By: Richard Mudgett (rmudgett) 2013-09-11 13:26:28.533-0500 If the call is up long enough to process the local channel optimization from stasis then the assertion does not happen. By: Richard Mudgett (rmudgett) 2013-09-12 20:40:36.786-0500 See the cdr_assertion_full.txt attached to ASTERISK-22506. By: Richard Mudgett (rmudgett) 2013-09-26 18:43:18.799-0500 Correction, it is an assertion failure resulting in a crash when the callee/queue-agent hangs up not when the caller hangs up. If the caller hangs up the assertion does not happen. I think my comment about the duration of the call having something to do with not crashing was in error. I think I may have hung up the caller first instead. | ||||